[EFL] REGRESSION(r176514): It made performance tests fail https://bugs.webkit.org/show_bug.cgi?id=139037

Reviewed by Gyuyoung Kim.

Source/WebKit2:

* WebProcess/efl/WebProcessMainEfl.cpp: Don't try to load/shutdown eail if eailLibraryPath() is empty.

Tools:

* Scripts/webkitpy/port/efl.py:
(EflPort.setup_environ_for_server): Pass ACCESSIBILITY_EAIL_LIBRARY_PATH environment variable to WTR.
* efl/jhbuildrc: Set ACCESSIBILITY_EAIL_LIBRARY_PATH to point to DependenciesEFL/lib/libeail.so
only if ACCESSIBILITY_EAIL_LIBRARY_PATH isn't already set and DependenciesEFL/lib/libeail.so exists.


Canonical link: https://commits.webkit.org/156917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176538 268f45cc-cd09-0410-ab3c-d52691b4dbfc